force-app/main/default/objects/Account/fields/DRC_NBC_Account_Category__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Account_Category__c</fullName>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alpha</fullName>
            </value>
            <value>
                <fullName>Bravo</fullName>
            </value>
            <value>
                <fullName>Charlie</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Echo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>