force-app/main/default/objects/Account/fields/DRC_NBC_Account_Email_Email__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Account_Email_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>