force-app/main/default/objects/Account/fields/DRC_NBC_Account_Sync_To_BC__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Account_Sync_To_BC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Sync To BC</label>
    <type>Checkbox</type>
</CustomField>