force-app/main/default/objects/Account/fields/DRC_NBC_BC_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_BC_Approval_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved In BC?</label>
    <type>Checkbox</type>
</CustomField>