force-app/main/default/objects/Account/fields/DRC_NBC_Consignee_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Consignee_Bank_Account_Number__c</fullName>
    <label>Consignee Bank Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>