force-app/main/default/objects/Account/fields/DRC_NBC_Consignee_Bank_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Consignee_Bank_IFSC_Code__c</fullName>
    <label>Consignee Bank IFSC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>