force-app/main/default/objects/Account/fields/DRC_NBC_Consignee_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Consignee_Bank_Name__c</fullName>
    <label>Consignee Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>