force-app/main/default/objects/Account/fields/DRC_NBC_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>