force-app/main/default/objects/Account/fields/DRC_NBC_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Customer_Number__c</fullName>
    <label>Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>