force-app/main/default/objects/Account/fields/DRC_NBC_Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier-1</fullName>
            </value>
            <value>
                <fullName>Tier-2</fullName>
            </value>
            <value>
                <fullName>Tier-3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>