force-app/main/default/objects/Account/fields/DRC_NBC_GST_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_GST_Number__c</fullName>
    <label>Billing GST Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>