force-app/main/default/objects/Account/fields/DRC_NBC_Highest_Authority_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Highest_Authority_For_Approval__c</fullName>
    <label>Highest Authority For Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yash Drolia</fullName>
            </value>
            <value>
                <fullName>Amit Drolia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>