force-app/main/default/objects/Account/fields/DRC_NBC_Highest_Authority_User__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Highest_Authority_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Highest Authority User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>