force-app/main/default/objects/Account/fields/DRC_NBC_Latitude__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Latitude__c</fullName>
    <defaultValue>&quot;19.1902836&quot;</defaultValue>
    <label>Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>