force-app/main/default/objects/Account/fields/DRC_NBC_Longitude__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Longitude__c</fullName>
    <defaultValue>&quot;72.8357718&quot;</defaultValue>
    <label>Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>