force-app/main/default/objects/Account/fields/DRC_NBC_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>