force-app/main/default/objects/Account/fields/DRC_NBC_PAN_No__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_PAN_No__c</fullName>
    <label>PAN No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>