force-app/main/default/objects/Account/fields/DRC_NBC_Posted_To_bc__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Posted_To_bc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posted To Bc</label>
    <type>Checkbox</type>
</CustomField>