force-app/main/default/objects/Account/fields/DRC_NBC_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Special_Instructions__c</fullName>
    <label>Special Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>