force-app/main/default/objects/Account/fields/DRC_NBC_Value__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Value__c</fullName>
    <label>Value (Crores)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>