force-app/main/default/objects/Account/fields/DRC_NBC_Volume__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Volume__c</fullName>
    <label>Volume (Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>