force-app/main/default/objects/Account/fields/NBC_DRC_Account_DRC_Code__c.field-meta.xml
<CustomField>
    <fullName>NBC_DRC_Account_DRC_Code__c</fullName>
    <externalId>true</externalId>
    <label>Account DRC Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>