force-app/main/default/objects/Account/fields/Other_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Email__c</fullName>
    <label>Other Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>