force-app/main/default/objects/Account/fields/SalesPerson_Code__c.field-meta.xml
<CustomField>
    <fullName>SalesPerson_Code__c</fullName>
    <label>SalesPerson Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ajit Phadke</fullName>
            </value>
            <value>
                <fullName>Ajit Vasudevan</fullName>
            </value>
            <value>
                <fullName>Amit Drolia</fullName>
            </value>
            <value>
                <fullName>Bhavesh Tambe</fullName>
            </value>
            <value>
                <fullName>Jigna Shah</fullName>
            </value>
            <value>
                <fullName>Kirit Acharya</fullName>
            </value>
            <value>
                <fullName>Manali Maniyar</fullName>
            </value>
            <value>
                <fullName>Nirmal Mansukhani</fullName>
            </value>
            <value>
                <fullName>Shirley D&apos;silva</fullName>
            </value>
            <value>
                <fullName>Shekhar Rege</fullName>
            </value>
            <value>
                <fullName>Tanay Drolia</fullName>
            </value>
            <value>
                <fullName>Vijay Gurnani</fullName>
            </value>
            <value>
                <fullName>Yash Drolia</fullName>
            </value>
            <value>
                <fullName>AKSHTA SAWANT</fullName>
            </value>
            <value>
                <fullName>AJITPH</fullName>
                <isActive>false</isActive>
                <label>AJITPH</label>
            </value>
            <value>
                <fullName>AJITVA</fullName>
                <isActive>false</isActive>
                <label>AJITVA</label>
            </value>
            <value>
                <fullName>AMITDR</fullName>
                <isActive>false</isActive>
                <label>AMITDR</label>
            </value>
            <value>
                <fullName>Akhta Sawant</fullName>
                <isActive>false</isActive>
                <label>Akhta Sawant</label>
            </value>
            <value>
                <fullName>BHAVTA</fullName>
                <isActive>false</isActive>
                <label>BHAVTA</label>
            </value>
            <value>
                <fullName>JIGNA</fullName>
                <isActive>false</isActive>
                <label>JIGNA</label>
            </value>
            <value>
                <fullName>KIRTIA</fullName>
                <isActive>false</isActive>
                <label>KIRTIA</label>
            </value>
            <value>
                <fullName>MANMA</fullName>
                <isActive>false</isActive>
                <label>MANMA</label>
            </value>
            <value>
                <fullName>NIRMAL</fullName>
                <isActive>false</isActive>
                <label>NIRMAL</label>
            </value>
            <value>
                <fullName>SHIRLEY</fullName>
                <isActive>false</isActive>
                <label>SHIRLEY</label>
            </value>
            <value>
                <fullName>SHREGE</fullName>
                <isActive>false</isActive>
                <label>SHREGE</label>
            </value>
            <value>
                <fullName>TANYDR</fullName>
                <isActive>false</isActive>
                <label>TANYDR</label>
            </value>
            <value>
                <fullName>VIJYGU</fullName>
                <isActive>false</isActive>
                <label>VIJYGU</label>
            </value>
            <value>
                <fullName>YASHDR</fullName>
                <isActive>false</isActive>
                <label>YASHDR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>