force-app/main/default/objects/Account/validationRules/Account_Billing_Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Billing_Address_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BillingCountry)</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Complete Billing  Country is mandatory.</errorMessage>
</ValidationRule>