force-app/main/default/objects/Account/validationRules/Account_Billing_City_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Billing_City_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BillingCity)</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>Billing City is mandatory.</errorMessage>
</ValidationRule>