force-app/main/default/objects/Account/validationRules/Account_Billing_PostalCode_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Billing_PostalCode_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BillingPostalCode)</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Billing Postal Code is mandatory.</errorMessage>
</ValidationRule>