force-app/main/default/objects/Account/validationRules/Account_Billing_State_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Billing_State_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(BillingState)</errorConditionFormula>
    <errorDisplayField>BillingState</errorDisplayField>
    <errorMessage>Billing State is mandatory.</errorMessage>
</ValidationRule>