force-app/main/default/objects/Account/validationRules/Account_Billing_Street_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Billing_Street_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BillingStreet)</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>Billing Street is mandatory.</errorMessage>
</ValidationRule>