force-app/main/default/objects/Account/validationRules/Account_Consignee_Bank_Account_Number_Re.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Consignee_Bank_Account_Number_Re</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(DRC_NBC_Consignee_Bank_Account_Number__c)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Consignee_Bank_Account_Number__c</errorDisplayField>
    <errorMessage>Consignee Bank Account Number is mandatory.</errorMessage>
</ValidationRule>