force-app/main/default/objects/Account/validationRules/Account_Consignee_Bank_Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Consignee_Bank_Address_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(DRC_NBC_Consignee_Bank_Address__c)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Consignee_Bank_Address__c</errorDisplayField>
    <errorMessage>Consignee Bank Address is mandatory.</errorMessage>
</ValidationRule>