force-app/main/default/objects/Account/validationRules/Account_Consignee_Bank_IFSC_Code_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Consignee_Bank_IFSC_Code_Require</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(DRC_NBC_Consignee_Bank_IFSC_Code__c)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Consignee_Bank_IFSC_Code__c</errorDisplayField>
    <errorMessage>Consignee Bank IFSC Code is mandatory.</errorMessage>
</ValidationRule>