force-app/main/default/objects/Account/validationRules/Account_Consignee_Bank_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Consignee_Bank_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(DRC_NBC_Consignee_Bank_Name__c)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Consignee_Bank_Name__c</errorDisplayField>
    <errorMessage>Consignee Bank Name is mandatory.</errorMessage>
</ValidationRule>