force-app/main/default/objects/Account/validationRules/Account_DRC_NBC_Credit_Limit_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_DRC_NBC_Credit_Limit_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(DRC_NBC_Credit_Limit__c)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Credit_Limit__c</errorDisplayField>
    <errorMessage>Credit Limit is mandatory.</errorMessage>
</ValidationRule>