force-app/main/default/objects/Account/validationRules/Account_DRC_NBC_Value_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_DRC_NBC_Value_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(DRC_NBC_Value__c)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Value__c</errorDisplayField>
    <errorMessage>Value is mandatory.</errorMessage>
</ValidationRule>