force-app/main/default/objects/Account/validationRules/Account_DRC_NBC_Volume_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_DRC_NBC_Volume_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(DRC_NBC_Volume__c)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Volume__c</errorDisplayField>
    <errorMessage>Volume is mandatory.</errorMessage>
</ValidationRule>