force-app/main/default/objects/Account/validationRules/Account_Industry_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Industry_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Industry))</errorConditionFormula>
    <errorDisplayField>Industry</errorDisplayField>
    <errorMessage>Industry is mandatory.</errorMessage>
</ValidationRule>