force-app/main/default/objects/Account/validationRules/Account_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Type))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Type is mandatory.</errorMessage>
</ValidationRule>