force-app/main/default/objects/Account/validationRules/GST_Customer_type.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_Customer_type</fullName>
    <active>false</active>
    <description>GST_Customer_type</description>
    <errorConditionFormula>ISBLANK(TEXT(DRC_Gst_Customer_Type__c))</errorConditionFormula>
    <errorDisplayField>DRC_Gst_Customer_Type__c</errorDisplayField>
    <errorMessage>DRC GST Customer Type should not be blank.</errorMessage>
</ValidationRule>