force-app/main/default/objects/Account/validationRules/PAN_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(DRC_NBC_GST_Number__c)),
    ISBLANK(DRC_NBC_PAN_No__c)
)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_PAN_No__c</errorDisplayField>
    <errorMessage>&quot;PAN Number is required when GST Number is provided.&quot;</errorMessage>
</ValidationRule>