force-app/main/default/objects/Account/validationRules/Prevent_Edit_Customer_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_Customer_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(DRC_NBC_Customer_Number__c),
    NOT(ISBLANK(PRIORVALUE(DRC_NBC_Customer_Number__c)))
)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Customer_Number__c</errorDisplayField>
    <errorMessage>“This field is system-generated and cannot be edited.”</errorMessage>
</ValidationRule>